removed borders fixed overflow issue

--- a/app/components/navigation/NavBar.module.css
+++ b/app/components/navigation/NavBar.module.css
@@ -11,7 +11,6 @@
     position: -webkit-sticky;
     top: 0;
     left: 0;
-    border: 2px solid blue;
     flex-shrink: 0;
 }
 
@@ -41,7 +40,6 @@
     line-height: 3rem;
     margin-bottom: auto;
     padding: 1rem;
-    border: 0px red solid;
     letter-spacing: -2px;
     word-spacing: 4px;
 }
@@ -62,11 +60,25 @@
         background-color: light-dark(var(--mantine-color-yellow-4), var(--mantine-color-dark-9));
     }
 }
+.aboutActive {
+    width: 100%;
+    height: 3.3rem;
+    padding-top: 1rem;
+    padding-left: 1.4rem;
+    border-top: rem(1px) solid light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    border-bottom: rem(1px) solid light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    margin-top: auto;
+    font-weight: 600;
+    font-size: .9rem;
+    cursor: pointer;
+
+    background-color: light-dark(var(--mantine-color-yellow-4), var(--mantine-color-dark-9));
+}
 
 .aboutBodyShow {
     display: block;
     width: 100%;
-    height: 35%;
+    height: 30%;
     font-size: .8rem;
     font-weight: 450;
     padding: 1rem;
@@ -126,6 +138,20 @@
         background-color: light-dark(var(--mantine-color-green-4), var(--mantine-color-dark-5));
     }
 }
+.projectsActive {
+    width: 100%;
+    height: 3.3rem;
+    z-index: 100;
+    padding-top: 1rem;
+    padding-left: 1.4rem;
+    border-bottom: rem(1px) solid light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    align-items: flex-end;
+    font-weight: 600;
+    font-size: .9rem;
+    cursor: pointer;
+
+    background-color: light-dark(var(--mantine-color-green-4), var(--mantine-color-dark-5));
+}
 
 .projectsBodyShow {
     display: block;
@@ -135,8 +161,6 @@
     border-bottom: rem(1px) solid light-dark(var(--mantine-color-black), var(--mantine-color-white));
     opacity: 1;
     transition: height 1s ease, opacity 0.3s ease;
-    animation: fadeIn 1s;
-    border: 2px orangered solid;
 }
 
 .projectsBodyHide {
@@ -147,6 +171,8 @@
     opacity: 0;
     transition: height 1s ease, opacity 0.3s ease;
     z-index: 0;
+    background-color: light-dark(var(--mantine-color-green-4), var(--mantine-color-dark-5));
+
 }
 
 .projectsStackContainer {
@@ -160,6 +186,8 @@
     opacity: 1;
     padding-left: 1.5rem;
     cursor: pointer;
+    background-color: light-dark(var(--mantine-color-green-4), var(--mantine-color-dark-5));
+
 }
 
 .projectsStackContainerHide {
@@ -172,6 +200,8 @@
     padding-left: 1.5rem;
     opacity: 0;
     animation: fadeIn 1s;
+    background-color: light-dark(var(--mantine-color-green-4), var(--mantine-color-dark-5));
+
 }
 
 .contact {
@@ -187,6 +217,18 @@
     &:hover {
         background-color: light-dark(var(--mantine-color-cyan-4), var(--mantine-color-cyan-5));
     }
+}
+.contactActive {
+    width: 100%;
+    height: 3.3rem;
+    padding-top: 1rem;
+    padding-left: 1.4rem;
+    border-bottom: rem(1px) solid light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    font-weight: 600;
+    font-size: .9rem;
+    cursor: pointer;
+    z-index: 700;
+    background-color: light-dark(var(--mantine-color-cyan-4), var(--mantine-color-cyan-5));
 }
 
 
