--- a/app/components/projects/Projects.module.css
+++ b/app/components/projects/Projects.module.css
@@ -1,6 +1,5 @@
 .projectsModule {
     display:block;
-    border: 2px red solid;
     position: relative;
     width: 100%;
     height: 100%;
